--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -40,6 +40,11 @@
 
         <!--new register-->
         <TextView
+            android:clickable="true"
+            android:layout_marginTop="15dp"
+            android:textStyle="italic"
+            android:textColor="@color/colorAccent"
+            android:id="@+id/txtRegister"
             android:layout_gravity="center_horizontal"
             android:text="New Register"
             android:layout_width="wrap_content"
