permission Internet Success

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,6 +20,8 @@
 
         <!--user-->
         <EditText
+            android:textSize="@dimen/h3"
+            android:background="@drawable/text_field_user"
             android:inputType="text"
             android:hint="User :"
             android:layout_width="match_parent"
@@ -27,6 +29,9 @@
 
         <!--password-->
         <EditText
+            android:layout_marginTop="@dimen/m1"
+            android:background="@drawable/text_field_password"
+            android:textSize="@dimen/h3"
             android:inputType="textPassword"
             android:hint="Password :"
             android:layout_width="match_parent"
@@ -34,6 +39,8 @@
 
         <!--login-->
         <Button
+            android:layout_marginTop="@dimen/m1"
+            android:background="@drawable/bg_button"
             android:text="Login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
