--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+  <!--wallpaper-->
+  <ImageView
+      android:src="@drawable/wallpaper"
+      android:scaleType="fitXY"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
+
+
+
   <!--Content of Fragment-->
-<FrameLayout
+  <FrameLayout
     android:id="@+id/contentMainFragment"
 
     android:layout_width="match_parent"
