--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -7,6 +7,7 @@
 
 
     <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarRegister"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:background="@color/colorPrimary"
         android:layout_width="match_parent"
@@ -23,6 +24,9 @@
 
         <!--Name-->
         <EditText
+            android:id="@+id/edtName"
+            android:textSize="@dimen/h3"
+            android:background="@drawable/text_field_user"
             android:inputType="text"
             android:hint="Name"
             android:layout_width="match_parent"
@@ -30,6 +34,10 @@
 
         <!--User-->
         <EditText
+            android:id="@+id/edtUser"
+            android:layout_marginTop="@dimen/m1"
+            android:textSize="@dimen/h3"
+            android:background="@drawable/text_field_user"
             android:inputType="text"
             android:hint="User"
             android:layout_width="match_parent"
@@ -37,6 +45,10 @@
 
         <!--Password-->
         <EditText
+            android:id="@+id/edtPassword"
+            android:layout_marginTop="@dimen/m1"
+            android:textSize="@dimen/h3"
+            android:background="@drawable/text_field_password"
             android:inputType="text"
             android:hint="Pasword"
             android:layout_width="match_parent"
